--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ html {
 
 html,
 body {
+  overflow-x: hidden;
   margin: 0;
   padding: 0;
   background-color: black;
@@ -38,7 +39,7 @@ nav {
   position: sticky;
   top: 0;
   overflow: hidden;
-  margin: 0 2rem;
+  padding: 0 2rem;
   justify-content: space-between;
   align-items: center;
   height: 10vh;
